--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 50px;
     margin-top: 200px; /* Abstand für Platzierung des Kreises */
+    justify-content: center;
+    min-height: 100vh; /* Höhe des Viewports */
+    margin-top: 60px; /* Abstand für Platzierung des Headers */
 }
 
 #circle {
